--- a/css/videojs-thumbnail.css
+++ b/css/videojs-thumbnail.css
@@ -7,7 +7,7 @@
   /* the thumbnail image itself */
   .vjs-thumbnail {
     position: absolute;
-    left: -50px !important;
+    left: -75px !important; /* -50px !important*/
     bottom: 1.3em;
     opacity: 0;
     transition: opacity .2s ease;
@@ -23,7 +23,7 @@
   .vjs-progress-control:active .vjs-thumbnail {
     opacity: 1;
 
-    width: 100px;
+    width: 150px;
 
   }
   
