--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,21 @@ body{
     top: calc(50% - 30px);
     left: calc(50% - 50px);
 }
+
+.img-overlay-container {
+    position: relative;
+}
+
+.overlay-desc {
+    position: absolute;
+    left: -95px;
+    right: 0px;
+    top: -40px;
+    bottom: 0;
+    width: 191px;
+    background: rgba(30, 30, 30, 0.6);
+    padding: 14px;
+    color: #FFF;
+    font-size: 12px;
+    font-weight: bold;
+}
